--- a/BackEnd.html
+++ b/BackEnd.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head></head>
-<body onload="myfun()" onkeypress=if(event.keyCode==13){globalSearch();}>
+<body onload="myfun()" onkeypress=if(event.keyCode==13){sorting();} >
 
 <input type="text" id="input" placeholder="Search With Keyword" >
 
@@ -28,17 +28,39 @@
 
 
 <div>
-<h1 id="headline0"></h1>
-<h1 id="headline1"></h1>
-<h1 id="headline2"></h1>
-<h1 id="headline3"></h1>
-<h1 id="headline4"></h1>
-<h1 id="headline5"></h1>
-<h1 id="headline6"></h1>
-<h1 id="headline7"></h1>
-<h1 id="headline8"></h1>
-<h1 id="headline9"></h1>
+<a href="" id="li0"><h1 id="headline0"></h1></a>
+<img id="image0" src="" alt="image not loaded" width="304" height="228"/>
+<p id="de0"></p>
+<a href="" id="li1"><h1 id="headline1"></h1></a>
+<img id="image1"  src="" alt="image not loaded" width="304" height="228"/>
+<p id="de1"></p>
+<a href="" id="li2"><h1 id="headline2"></h1></a>
+<img id="image2"  src="" alt="image not loaded" width="304" height="228"/>
+<p id="de2"></p>
+<a href="" id="li3"><h1 id="headline3"></h1></a>
+<img id="image3" src="" alt="image not loaded" width="304" height="228"/>
+<p id="de3"></p>
+<a href="" id="li4"><h1 id="headline4"></h1></a>
+<img id="image4" src="" alt="image not loaded" width="304" height="228"/>
+<p id="de4"></p>
+<a href="" id="li5"><h1 id="headline5"></h1></a>
+<img id="image5" src=""  alt="image not loaded" width="304" height="228"/>
+<p id="de5"></p>
+<a href="" id="li6"><h1 id="headline6"></h1></a>
+<img id="image6"  src="" alt="image not loaded" width="304" height="228"/>
+<p id="de6"></p>
+<a href="" id="li7"><h1 id="headline7"></h1></a>
+<img id="image7"  src="" alt="image not loaded" width="304" height="228"/>
+<p id="de7"></p>
+<a href="" id="li8"><h1 id="headline8"></h1></a>
+<img id="image8"  src="" alt="image not loaded" width="304" height="228"/>
+<p id="de8"></p>
+<a href="" id="li9"><h1 id="headline9"></h1></a>
+<img id="image9"  src="" alt="image not loaded" width="304" height="228"/>
+<p id="de9"></p>
+
 </div>
+
 <script>
 //main head lines
 function myfun()
@@ -47,8 +69,15 @@ function myfun()
   .then(data => data.json())
      .then(data =>{
       for(var i=0;i<data.articles.length;i++)
-       {document.getElementById("headline"+i)
-         .innerHTML=data.articles[i].title;}})
+       {
+         document.getElementById("headline"+i).innerHTML=data.articles[i].title;
+          document.getElementById("li"+i).href=data.articles[i].url;
+         document.getElementById('image'+i).src=data.articles[i].urlToImage;
+         document.getElementById("de"+i).innerHTML=data.articles[i].description;
+
+
+}
+     })
  .catch((err)=> {console.error(err);})
 }
 //different channels
@@ -58,8 +87,11 @@ function BBCNews()
   .then(data => data.json())
        .then(data =>{
          for(var i=0;i<data.articles.length;i++)
-         {document.getElementById("headline"+i)
-           .innerHTML=data.articles[i].title;}})
+         {document.getElementById("headline"+i).innerHTML=data.articles[i].title;
+         document.getElementById("li"+i).href=data.articles[i].url;
+       document.getElementById('image'+i).src =data.articles[i].urlToImage;
+      document.getElementById("de"+i).innerHTML=data.articles[i].description;
+    }})
   .catch((err)=> {console.error(err);})
 }
 function BBCSports()
@@ -68,8 +100,11 @@ function BBCSports()
   .then(data => data.json())
        .then(data =>{
          for(var i=0;i<data.articles.length;i++)
-         {document.getElementById("headline"+i)
-           .innerHTML=data.articles[i].title;}})
+         {document.getElementById("headline"+i).innerHTML=data.articles[i].title;
+         document.getElementById("li"+i).href=data.articles[i].url;
+         document.getElementById('image'+i).src =data.articles[i].urlToImage;
+        document.getElementById("de"+i).innerHTML=data.articles[i].description;
+      }})
   .catch((err)=> {console.error(err);})
 }
 function ABC()
@@ -78,8 +113,11 @@ function ABC()
   .then(data => data.json())
        .then(data =>{
          for(var i=0;i<data.articles.length;i++)
-         {document.getElementById("headline"+i)
-           .innerHTML=data.articles[i].title;}})
+         {document.getElementById("headline"+i).innerHTML=data.articles[i].title;
+         document.getElementById("li"+i).href=data.articles[i].url;
+         document.getElementById('image'+i).src =data.articles[i].urlToImage;
+        document.getElementById("de"+i).innerHTML=data.articles[i].description;
+      }})
   .catch((err)=> {console.error(err);})
 }
 function ESPN()
@@ -88,8 +126,11 @@ function ESPN()
   .then(data => data.json())
        .then(data =>{
          for(var i=0;i<data.articles.length;i++)
-         {document.getElementById("headline"+i)
-           .innerHTML=data.articles[i].title;}})
+         {document.getElementById("headline"+i).innerHTML=data.articles[i].title;
+         document.getElementById("li"+i).href=data.articles[i].url;
+         document.getElementById('image'+i).src=data.articles[i].urlToImage;
+        document.getElementById("de"+i).innerHTML=data.articles[i].description;
+      }})
   .catch((err)=> {console.error(err);})
 }
 function BusinessInsider()
@@ -98,8 +139,11 @@ function BusinessInsider()
   .then(data => data.json())
        .then(data =>{
          for(var i=0;i<data.articles.length;i++)
-         {document.getElementById("headline"+i)
-           .innerHTML=data.articles[i].title;}})
+         {document.getElementById("headline"+i).innerHTML=data.articles[i].title;
+         document.getElementById("li"+i).href=data.articles[i].url;
+         document.getElementById('image'+i).src =data.articles[i].urlToImage;
+        document.getElementById("de"+i).innerHTML=data.articles[i].description;
+      }})
   .catch((err)=> {console.error(err);})
 }
 function Buzzfeed()
@@ -108,8 +152,11 @@ function Buzzfeed()
   .then(data => data.json())
        .then(data =>{
          for(var i=0;i<data.articles.length;i++)
-         {document.getElementById("headline"+i)
-           .innerHTML=data.articles[i].title;}})
+         {document.getElementById("headline"+i).innerHTML=data.articles[i].title;
+         document.getElementById("li"+i).href=data.articles[i].url;
+       document.getElementById('image'+i).src=data.articles[i].urlToImage;
+      document.getElementById("de"+i).innerHTML=data.articles[i].description;
+    }})
   .catch((err)=> {console.error(err);})
 }
 function CNBC()
@@ -118,8 +165,11 @@ function CNBC()
   .then(data => data.json())
        .then(data =>{
          for(var i=0;i<data.articles.length;i++)
-         {document.getElementById("headline"+i)
-           .innerHTML=data.articles[i].title;}})
+         {document.getElementById("headline"+i).innerHTML=data.articles[i].title;
+         document.getElementById("li"+i).href=data.articles[i].url;
+         document.getElementById('image'+i).src=data.articles[i].urlToImage;
+        document.getElementById("de"+i).innerHTML=data.articles[i].description;
+      }})
   .catch((err)=> {console.error(err);})
 }
 function CNN()
@@ -128,24 +178,30 @@ function CNN()
   .then(data => data.json())
        .then(data =>{
          for(var i=0;i<data.articles.length;i++)
-         {document.getElementById("headline"+i)
-           .innerHTML=data.articles[i].title;}})
+         {document.getElementById("headline"+i).innerHTML=data.articles[i].title;
+         document.getElementById("li"+i).href=data.articles[i].url;
+         document.getElementById('image'+i).src=data.articles[i].urlToImage;
+        document.getElementById("de"+i).innerHTML=data.articles[i].description;
+      }})
   .catch((err)=> {console.error(err);})
 }
 //searching in all india news
 function globalSearch()
 {console.log("enter");
   let x=document.getElementById("input").value;
- fetch(`https://newsapi.org/v2/top-headlines?q=${x}&sources=google-news-in&apiKey=94e25a4c66eb4ea791f3898bdce7bcea`)
+ fetch(`https://newsapi.org/v2/everything?q=${x}&sources=google-news-in&apiKey=94e25a4c66eb4ea791f3898bdce7bcea`)
    .then(data => data.json())
   .then(data =>{
     if(data.articles == "")
       {
-     document.getElementById("notfound").innerHTML="News Not Found";
+     alert("News Not Found");
         }
     else{
    for(var i=0;i<data.articles.length;i++){
-     document.getElementById("headline"+i).innerHTML=data.articles[i].title;}
+     document.getElementById("headline"+i).innerHTML=data.articles[i].title;
+     document.getElementById("li"+i).href=data.articles[i].url;
+   document.getElementById('image'+i).src=data.articles[i].urlToImage;
+  document.getElementById("de"+i).innerHTML=data.articles[i].description;}
     }
   })
  .catch((err)=> {console.error(err);})
@@ -163,21 +219,31 @@ let x=document.getElementById("input").value;
      search.push(v1);
    }
  }
-   fetch(`https://newsapi.org/v2/top-headlines?q=${x}&sources=${search}&apiKey=94e25a4c66eb4ea791f3898bdce7bcea`)
+ if(search.length >0)
+{
+   fetch(`https://newsapi.org/v2/everything?q=${x}&sources=${search}&apiKey=94e25a4c66eb4ea791f3898bdce7bcea`)
     .then(data => data.json())
        .then(data =>{
          if(data.articles == "")
          {
-              document.getElementById("headline0").innerHTML="News Not Available";
+              alert("News Not Available in "+search);
          }
          else{
         for(let i=0;i<data.articles.length;i++)
-         {document.getElementById("headline"+i)
-           .innerHTML=data.articles[i].title;}
-         }
-         })
-   .catch((err)=> {console.error(err);})
+         {document.getElementById("headline"+i).innerHTML=data.articles[i].title;
+         document.getElementById("li"+i).href=data.articles[i].url;
+         document.getElementById('image'+i).src =data.articles[i].urlToImage;
+        document.getElementById("de"+i).innerHTML=data.articles[i].description;}
+         }})
+}
+else {
+  {
+    alert("please select atleast one channel");
   }
+}
+
+}
+
 
 </script>
 </body>
