--- a/index2.html
+++ b/index2.html
@@ -8,8 +8,8 @@
 		
         </head>
     <!--Begin Top -->
-	<body onload="myfun()" onkeypress=if(event.keyCode==13){sorting();}>
-        <div id ="top">
+	<body onload="myfun()" onkeypress=if(event.keyCode==13){sorting();>
+        <div id="top">
             <ul>
   <form>
   <li><label class="container">ABC News<input type="checkbox" id="ch0" value="abc-news"><span class="checkmark"></span></label></li>
@@ -21,9 +21,9 @@
       <li><label class="container">CNN<input type="checkbox" id="ch6" value="cnn"><span class="checkmark"></span></label></li>
       <li><label class="container">ESPN<input type="checkbox" id="ch7" value="espn"><span class="checkmark"></span></label></li>
       <li><input type="text" id="input" placeholder="Search with keyword"></li>
-       <li><button type="submit" onclick="sorting()" value="Submit">Search</button></li>
+    
 </form>
-
+   <li><button type="submit" onclick="sorting()">Search</button></li>
  </ul>
         </div>
         <!-- END TOP-->
@@ -38,7 +38,7 @@
             <ul>
             
                 <li><a class="ft" id="bbc-news">BBC NEWS</a></li>
-			     <li><a class="ft" id="bbc-sport">BBC SPORTS</a></li>
+			     <li><a class="ft"id="bbc-sport">BBC SPORTS</a></li>
                 <li><a class="ft" id="abc-news">ABC</a></li>
                 <li><a class="ft" id="espn">ESPN</a></li>
                 <li><a class="ft" id="business-insider">Business Insider</a></li>
@@ -191,10 +191,7 @@
 </div>
 <!-- END FOOTER -->
  
-
-
-
-     <script src="script.js" type="text/javascript"></script>
+<script src="script.js"></script>
 	</body>
 </html>
 
