--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
 		
         </head>
     <!--Begin Top -->
-	<body onload="myfun()" onkeypress=if(event.keyCode==13){sorting();>
+	<body onload="myfun()" onkeypress=if(event.keyCode==13){sorting();}>
         <div id="top">
             <ul>
   <form>
@@ -20,7 +20,7 @@
       <li><label class="container">CNBC<input type="checkbox" id="ch5" value="cnbc"><span class="checkmark"></span></label></li>
       <li><label class="container">CNN<input type="checkbox" id="ch6" value="cnn"><span class="checkmark"></span></label></li>
       <li><label class="container">ESPN<input type="checkbox" id="ch7" value="espn"><span class="checkmark"></span></label></li>
-      <li><input type="text" id="input" placeholder="Search with keyword"></li>
+      <li><input type="text" id="input" placeholder="Search with keyword" ></li>
     
 </form>
    <li><button type="submit" onclick="sorting()">Search</button></li>
@@ -37,7 +37,7 @@
         <div id="nav">
             <ul>
             
-                <li><a class="ft" id="bbc-news">BBC NEWS</a></li>
+                <li><a class="ft" id="bbc-news" >BBC NEWS</a></li>
 			     <li><a class="ft"id="bbc-sport">BBC SPORTS</a></li>
                 <li><a class="ft" id="abc-news">ABC</a></li>
                 <li><a class="ft" id="espn">ESPN</a></li>
